# pincushion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md
.github/workflows/: rust-ci.yml
.local/: dry-run.md  operator-notes.md  sample-watchlist.yaml
.local/first-monitored/: notes.md  watchlist.yaml
.local/first-monitored/.pincushion/: seen.json
src/: artifact_pipeline.rs  config.rs  diff.rs  fetch.rs  http.rs  inventory.rs  main.rs  report.rs  review.rs  signals.rs  state.rs  unpack.rs
src/registry/: crates.rs  mod.rs  npm.rs  pypi.rs  rubygems.rs
tests/fixtures/config/: full-watchlist.yaml  invalid-watchlist.yaml
tests/fixtures/e2e/npm/chalk/5.3.0/: package.json
tests/fixtures/e2e/npm/chalk/5.4.0/: README.md  package.json
tests/fixtures/e2e/npm/chalk/5.4.0/source/: index.js
tests/fixtures/e2e/npm/react/19.0.0/: package.json
tests/fixtures/e2e/npm/react/19.1.0/: package.json
tests/fixtures/e2e/npm/react/19.1.0/scripts/: postinstall.js
tests/fixtures/registry/crates/: clap.json
tests/fixtures/registry/npm/: chalk.json
tests/fixtures/registry/pypi/: requests.json
tests/fixtures/state/sample-repo/: watchlist.yaml
tests/fixtures/state/sample-repo/.pincushion/: seen.json
tests/golden/reports/: chalk-benign.json  chalk-benign.md  react-suspicious.json  react-suspicious.md
tests/golden/review-input/: chalk-benign.json  react-suspicious.json
