[package]
name = "pincushion"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
